--- a/GalaxyWaves/GalaxyWaves.csproj
+++ b/GalaxyWaves/GalaxyWaves.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Areas\Guide\Models\" />
     <Folder Include="Areas\Student\Data\" />
     <Folder Include="Areas\Student\Models\" />
+    <Folder Include="Payment\" />
   </ItemGroup>
 
 </Project>
