--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -17,4 +17,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Departments\Data\" />
+    <Folder Include="Areas\Tutor\Controllers\" />
+    <Folder Include="Areas\Tutor\Data\" />
+    <Folder Include="Areas\Tutor\Views\" />
+  </ItemGroup>
+
 </Project>
