--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -19,10 +19,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.7" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\A_Courses\Controllers\" />
+    <Folder Include="Areas\A_Courses\Data\" />
+    <Folder Include="Areas\A_Courses\Models\" />
+    <Folder Include="Areas\A_Courses\Views\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
     <Folder Include="wwwroot\lib\bootstrap\dist\js\" />
     <Folder Include="wwwroot\lib\jquery-validation-unobtrusive\" />
