--- a/GalaxyWave.UI/appsettings.json
+++ b/GalaxyWave.UI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlserver": "Server=(localdb)\\MSSQLLocalDB;Database=GalaxySQL;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
