Galaxy-Wave Version 2 (update 0.3) // signIn method not complete

--- a/GalaxyWave.UI/GalaxyWave.UI.csproj
+++ b/GalaxyWave.UI/GalaxyWave.UI.csproj
@@ -25,6 +25,9 @@
 
   <ItemGroup>
     <Folder Include="Areas\AccessMethod\Data\" />
+    <Folder Include="Areas\Layer1\Data\" />
+    <Folder Include="Areas\Layer1\Models\" />
+    <Folder Include="Areas\Layer1\Views\" />
   </ItemGroup>
 
 </Project>
