--- a/GalaxyWave.UI/GalaxyWave.UI.csproj
+++ b/GalaxyWave.UI/GalaxyWave.UI.csproj
@@ -23,11 +23,7 @@
     <Folder Include="Areas\AccessMethod\Data\" />
     <Folder Include="Areas\Layer1\Data\" />
     <Folder Include="Areas\Layer1\Models\" />
-    <Folder Include="Areas\Layer1\Views\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GalaxyWave.SQL-Model\GalaxyWave.SQL-Model.csproj" />
+    <Folder Include="DataCenter\" />
   </ItemGroup>
 
 </Project>
