--- a/GalaxyWave_Dashboard.Api/GalaxyWave_Dashboard.Api.csproj
+++ b/GalaxyWave_Dashboard.Api/GalaxyWave_Dashboard.Api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\GalaxyWave.UI</DockerfileContext>
+    <UserSecretsId>12aca9c7-436b-4feb-8849-0f19e8fbb775</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,13 +17,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Utility\" />
   </ItemGroup>
 
 </Project>
